--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="styles/global.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Anton|Open+Sans" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="scripts/app.js"></script>
+    <script src="scripts/home.js"></script>
+    <script src="scripts/common.js"></script>
 </head>
 
 <body>
     <div id="promo">
         <div>Free shipping</div>
         <div style="display:none;">New Toys for puppies</div>
-        <div style="display:none;">Buy % toys and save 30%</div>
+        <div style="display:none;">Buy 3 toys and save 30%</div>
         <div style="display:none;">Same-Day Shipping</div>
+        <div style="display:none;">My dog, Kobe, is the best!&#128021</div>
     </div>
     <div id="topMenu">
         <div class="wrap">
@@ -57,7 +62,7 @@
                 </div>
             </div>
             <div class="rightColumn">
-                <a class="featureImage" src="/cat">
+                <a class="featureImageCat" src="/cat">
                     <img src="images/Cat1.jpg"/>
                 </a>
             </div>
@@ -91,12 +96,14 @@
         <div class="spacer v80"></div>
         <div id="birdFeature" class="feature">
             <div class="leftColumn">
+                <div class="text">
                 <h2>BIRDY NUMS NUMS</h2>
                 <div class="subHeading">KEEP YOUR BIRDS CHIPPER!</div>
                 <hr />
                 <p>Yummy snacks and feeders for every kind of bird.</p>
                 <div class="spacer v40"></div>
                 <a href="">CLICK FOR BIRDS</a>
+                </div>
             </div>
             <div class="rightColumn">
                 <a class="featureImage" src="Bird">
@@ -108,8 +115,8 @@
         <div id="birdImage" class="middleImage">
             <img src="images/bird_feeder.jpg"/>
         </div>
-        <div id="scolltoTop" title="Scroll to the top of the page">
-            <span>&uarr;</span>>
+        <div id="scrolltoTop" title="Scroll to the top of the page">
+            <span>&uarr;</span>
         </div>
         <div class="clear spacer v40"></div>
         <div id="contactUs" class="feature">
@@ -130,7 +137,7 @@
                 </div>
             </div>
             <div class="rightColumn">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3306.2820853254543!2d-117.69049138837156!3d34.03663447305089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c33301c3f6f97b%3A0xb48a8681a0461094!2sPetSmart!5e0!3m2!1sen!2sus!4v1692140378852!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"frameborder="0" style="border:0" allowfullscreen class="contactMap"></iframe>></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3306.2820853254543!2d-117.69049138837156!3d34.03663447305089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c33301c3f6f97b%3A0xb48a8681a0461094!2sPetSmart!5e0!3m2!1sen!2sus!4v1692140378852!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"frameborder="0" style="border:0" allowfullscreen class="contactMap"></iframe></iframe>
                 
                 
             </div>
